refactor(back): chat room fonctionnelle et authentification